[package]
name = "artgen"
version = "0.1.0"
authors = ["Maurice Manshanden <m.manshanden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
rand = "0.7.2"
minifb = "0.19.1"
image = "0.23.12"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.1"

[features]
default = ["rand/small_rng"]
